syntax = "proto3";

// optional
package find_duplicate;

// Service. Define methods that the grpc server can expose to the client
service FindDuplicateService {
  rpc getDuplicate (IntArray) returns (Result);
  rpc getDuplicateIndex (IntArray) returns (Result);
}

message IntArray {
  repeated int32 array = 1;
}

message Result {
  int32 value = 1;
}
